Fix hiccups when selecting color in the popup palette

Basically, we should always use FIRST_ACTIVE mode instead of POSTPONE when the
action is not extremely slow and user needs decently swift feedback.

BUG:490873